# manim-projects

./: .gitignore  README.md  flake.nix  ideas.md
3d_lin_equations_solution_short/: README.md  main.py  makefile  manim.cfg  pyproject.toml
3d_lin_equations_solution_short/voiceover/: script.md
actix_web_presentation/: Cargo.toml  README.md  main.py  makefile  pyproject.toml
actix_web_presentation/scripts/: test_upload.sh
comp_2_wp_4/: main.py  makefile  pyproject.toml
ec_video/: README.md  main.py  manim.cfg  pyproject.toml
ec_video/src/: quote.py
ewmac_short/: AMD.csv  README.md  layout.md  main.py  pyproject.toml
gp_overview/: README.md  main.py  makefile  manim.cfg  pyproject.toml  slides.sh
injective_surjective_intuition/: README.md  main.py  pyproject.toml
lin_equations_solution_short/: README.md  layout.md  main.py  manim.cfg  pyproject.toml
lin_equations_solution_short/voiceover/: script.md
lin_system_classification/: README.md  main.py  manim.cfg  pyproject.toml
lin_system_classification/voiceover/: script.md
lin_system_eq_intuition/: README.md  main.py  manim.cfg  pyproject.toml
playground/: README.md  main.py  manim.cfg  pyproject.toml
reflection_short/: README.md  main.py  manim.cfg  pyproject.toml
reflection_short/voiceover/: README.md
rodrigues_formula_short/: README.md  main.py  makefile  manim.cfg  pyproject.toml
rodrigues_formula_short/voiceover/: script.md
row_op_determinant_impact/: README.md  layout.md  main.py  makefile  pyproject.toml
set_basics_union_intersection/: README.md  flake.nix  main.py  pyproject.toml
