[project]
name = "3d-lin-equations-solution-short"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "manim-exts",
    "opencv-python-headless>=4.12.0.88",
]

[tool.uv.sources]
manim-exts = { git = "https://github.com/RowanTL/manim_exts.git", rev = "36dcd6ad1db1bbf45cb07e28076e367745c9e535" }
